// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`VixSrc Black Mirror 1`] = `
[
  {
    "format": "hls",
    "label": "VixSrc",
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "it",
      ],
      "extractorId": "vixsrc",
      "height": 1080,
    },
    "ttl": 21600000,
    "url": "https://vixsrc.to/playlist/307316.m3u8?token=24e90aee37b45f8342b1732873c2cff5&expires=1781601503&h=1",
  },
]
`;

exports[`VixSrc Black Mirror is excluded if no matching language was found 1`] = `[]`;

exports[`VixSrc Full Metal Jacket 1`] = `
[
  {
    "format": "hls",
    "label": "VixSrc",
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "it",
      ],
      "extractorId": "vixsrc",
      "height": 1080,
    },
    "ttl": 21600000,
    "url": "https://vixsrc.to/playlist/219736.m3u8?token=addd13e02cfbc758c81857ab27ac24cc&expires=1781601502&h=1",
  },
]
`;

exports[`VixSrc Rental Family 1`] = `
[
  {
    "format": "hls",
    "label": "VixSrc",
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "it",
      ],
      "extractorId": "vixsrc",
      "height": 1080,
    },
    "ttl": 21600000,
    "url": "https://vixsrc.to/playlist/671823.m3u8?token=0e7930feff9e7c5086ab4b90173cb9c7&expires=1781601504&h=1",
  },
]
`;
